test: 最大メモリ量を12Gまで増やしたい